GDW-296 #test #time 10m #comment fix alignment

--- a/src/app/shop/plans-and-features/new-plan-shop/new-plan-shop.component.scss
+++ b/src/app/shop/plans-and-features/new-plan-shop/new-plan-shop.component.scss
@@ -23,6 +23,7 @@
         color: $header-color;
         @media (max-width: $phablet-min-width-minus) {
           margin-bottom: 4px;
+          text-align: center;
         }
       }
       .banner-text {
@@ -51,7 +52,10 @@
       @media (max-width: $phablet-min-width-minus) {
         gap: 24px;
         padding: 0 39px;
-        margin-top: -110px;
+        margin-top: -100px;
+      }
+      @media(max-width: 337px) {
+        margin-top: -70px;
       }
       .plan-card {
         max-width: 520px;
